fix: fixed bottom allignment

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           me an email at
           <a href="mailto:mail@itsezsid.com">hello@itsezsid.com</a>
         </p>
-        <p>&mdash; sid ;)</p>
+        <p>sid ;)</p>
       </div>
     </article>
   </body>
