--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
           I'm building the next version of my website! Meanwhile, you can drop
           me an email at
-          <a href="mailto:mail@itsezsid.com">hello@itsezsid.com</a>
+          <a href="mailto:mail@itsezsid.com">hello@yeahsid.com</a>
         </p>
         <p>sid ;)</p>
       </div>
